<resources>
    <string name="am_sign_in_as_admin">Sign In As Admin</string>
    <string name="am_sign_in_as_staff">Sign In As Staff</string>

    <string name="ama_username">Username</string>
    <string name="ama_password">Password</string>
    <string name="ama_role">Role</string>

    <string name="aod_order_id">Order Id</string>
    <string name="aod_order_phone">Order Phone</string>
    <string name="aod_total">1000</string>
    <string name="aod_address">Address</string>
    <string name="aod_comment">Comment</string>
    <string name="aod_detail">Detail</string>

    <string name="asm_message">Message</string>
    <string name="asm_title">Title</string>
    <string name="asm__message">Message</string>
    <string name="asm_submit_message">Submit Message</string>

    <string name="asi_staff">Staff</string>
    <string name="asi_phone_number">Phone Number</string>
    <string name="asi_phone_number_val">0128688032</string>
    <string name="asi_password">Password</string>
    <string name="asi_password_val">chau1995</string>
    <string name="asi_sign_in_as_staff">Sign In As Staff</string>

    <string name="asia_admin">Admin</string>
    <string name="asia_phone_number">Phone Number</string>
    <string name="asia_phone_number_val">0128688032</string>
    <string name="asia_password">Password</string>
    <string name="asia_password_val">chau1995</string>
    <string name="asia_sign_in_as_admin">Sign In As Admin</string>

    <string name="ato_distance">DISTANCE:</string>
    <string name="ato_duration">DURATION:</string>
    <string name="ato_time_reach">TIME REACH:</string>

    <string name="anb_food_id">Food Id</string>
    <string name="anb_food_name">Food Name</string>
    <string name="anb_btn_select">SELECT</string>
    <string name="anb_btn_upload">UPLOAD</string>

    <string name="lanf_name">Name</string>
    <string name="lanf_description">Description</string>
    <string name="lanf_price">Price</string>
    <string name="lanf_btn_select">SELECT</string>
    <string name="lanf_btn_upload">UPLOAD</string>

    <string name="anml_name">Name</string>
    <string name="anml_btn_select">SELECT</string>
    <string name="anml_btn_upload">UPLOAD</string>

    <string name="bl_name_of_banner">Name of Banner</string>

    <string name="cas_admin">Admin</string>

    <string name="cs_staff">Staff</string>

    <string name="cal_phone_number">Phone Number</string>
    <string name="cal_phone_number_val">+60</string>
    <string name="cal_username">Username</string>
    <string name="cal_password">Password</string>

    <string name="csl_phone_number">Phone Number</string>
    <string name="csl_phone_shipper_val">+60</string>
    <string name="csl_username">Username</string>
    <string name="csl_password">Password</string>

    <string name="fi_name_of_food">Name of Food</string>

    <string name="lca_phone_number_val">+60</string>

    <string name="mi_name_of_menu">Name of Menu</string>

    <string name="odl_product_name">Product Name</string>
    <string name="odl_product_quantity">Product Quantity</string>
    <string name="odl_product_price">Product Price</string>

    <string name="ol_order_id">Order Id</string>
    <string name="ol_order_date">Order Date</string>
    <string name="ol_order_name">Order Name</string>
    <string name="ol_status">Status</string>
    <string name="ol_phone_number_val">0128688032</string>
    <string name="aol_address">Address</string>
    <string name="ol_price">Price</string>
    <string name="ol_btn_edit">Edit</string>
    <string name="ol_btn_remove">Remove</string>
    <string name="ol_btn_detail">Detail</string>
    <string name="ol_btn_direction">Direction</string>

    <string name="sl_shipper_phone">Shipper Phone</string>
    <string name="sl_shipper_name">Shipper Name</string>
    <string name="sl_shipper_password">Shipper Password</string>

    <string name="scl_food_name">Food 01</string>
    <string name="scl_user_phone">RM 9.90</string>

    <string name="uol_status">Status:</string>
    <string name="uol_shipper">Shipper:</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="fl_image_selected_string">Image Selected!</string>
    <string name="app_name">EatIt_Server</string>
    <string name="image_selected_string">Image Selected!</string>
</resources>
