<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetail"
    android:background="@drawable/maintheme">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/order_info"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorGold3"
        app:cardBackgroundColor="#FFFFFF"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_id"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/aod_order_id"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_phone"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/aod_order_phone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_total"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/aod_total"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_address"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/aod_address"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/order_comment"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical|start"
                    android:textAllCaps="true"
                    android:textStyle="italic"
                    android:text="@string/aod_comment"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/order_info"
        android:layout_marginTop="-8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="8dp"
            android:text="@string/aod_detail"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstFoods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>